# rust-client

./: .gitignore  Cargo.toml  README.md  makefile
.circleci/: config.yml
examples/: chat_completion.rs  chat_sse.rs  chat_sse_async.rs  chat_vision.rs  completion.rs  embedding.rs  factuality.rs  injection.rs  models.rs  pii.rs  rerank.rs  tokenize.rs  toxicity.rs  translate.rs
src/: chat.rs  client.rs  completion.rs  embedding.rs  factuality.rs  image.rs  injection.rs  lib.rs  models.rs  pii.rs  rerank.rs  tokenize.rs  toxicity.rs  translate.rs
