[package]
name = "prediction-guard"
version = "0.13.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Ed Gonzalez <ed.gonzalez@predictionguard.com>"]
description = "SDK for the Prediction Guard API"
homepage = "https://docs.predictionguard.com/docs/getting-started/welcome"
repository = "https://github.com/predictionguard/rust-client"
readme = "README.md"
documentation = "https://docs.rs/prediction-guard/latest/"
categories = ["api-bindings"]
keywords = ["prediction", "guard"]

[build-dependencies]
built = "0.7"

[dependencies]
eventsource-client = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
futures = "0.3"
dotenvy = "0.15"
base64 = "0.22.1"
async-trait = "0.1"
log = "0.4.22"
tokio = "1.40"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.37", features = ["full"] }
httpmock = "0.7"
